[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/LevelCompleteMenu.gd" type="Script" id=1]
[ext_resource path="res://menus/msgFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/buttonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://menus/MenuCoinCount.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/GemIndicator.tscn" type="PackedScene" id=5]

[node name="LevelCompleteMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -931.0
margin_top = -589.0
margin_right = 931.0
margin_bottom = 629.0

[node name="PanelContainer" type="PanelContainer" parent="Control/MarginContainer"]
self_modulate = Color( 0.301961, 0.301961, 0.301961, 1 )
margin_right = 1862.0
margin_bottom = 1218.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1855.0
margin_bottom = 1211.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/PanelContainer/MarginContainer"]
margin_left = 40.0
margin_right = 1808.0
margin_bottom = 1164.0
custom_constants/separation = 0

[node name="LevelCompleteLabel" type="Label" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1768.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 2 )
text = "Level Complete"
align = 1

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 1768.0
margin_bottom = 788.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 20
custom_constants/hseparation = 30
columns = 3

[node name="null" type="Label" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 66.0
margin_right = 304.0
margin_bottom = 80.0

[node name="thisRunLabel" type="Label" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 334.0
margin_right = 944.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 3 )
text = "This Run"
align = 1

[node name="overallLabel" type="Label" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 974.0
margin_right = 1584.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 3 )
text = "Overall"
align = 1

[node name="coinsLabel" type="Label" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 167.0
margin_right = 304.0
margin_bottom = 314.0
custom_fonts/font = ExtResource( 3 )
text = "Coins:"

[node name="runCoinCount" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_left = 334.0
margin_top = 167.0
margin_right = 944.0
margin_bottom = 314.0

[node name="overallCoinCount" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_left = 974.0
margin_top = 167.0
margin_right = 1584.0
margin_bottom = 314.0

[node name="gemsLabel" type="Label" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 365.0
margin_right = 304.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 3 )
text = "Gems:"

[node name="runGems" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 5 )]
margin_left = 334.0
margin_top = 334.0
margin_right = 944.0
margin_bottom = 544.0

[node name="overallGems" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 5 )]
margin_left = 974.0
margin_top = 334.0
margin_right = 1584.0
margin_bottom = 544.0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 788.0
margin_right = 1768.0
margin_bottom = 1164.0
custom_constants/margin_top = 40

[node name="Buttons" type="GridContainer" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 40.0
margin_right = 1768.0
margin_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 30
custom_constants/hseparation = 40
columns = 2

[node name="NextButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_right = 787.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 3 )
text = "Next Level"

[node name="LastCheckpointButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_left = 827.0
margin_right = 1768.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 3 )
text = " Load Checkpoint "

[node name="RestartButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_top = 183.0
margin_right = 787.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 3 )
text = " Restart Level "

[node name="QuitButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
margin_left = 827.0
margin_top = 183.0
margin_right = 1768.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 3 )
text = "Quit To Menu"

[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/LastCheckpointButton" to="." method="_on_LastCheckpointButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
